# test

./: README.md  conftest.py  pyproject.toml
.circleci/: config.yml
cfg/: constants.py
pages/: base_page.py  cart_page.py  main_page.py  shopping_page.py
services/users/: api_users.py  endpoints.py  payloads.py
services/users/models/: user_model.py
tests/api/: test_users.py
tests/ui/: __init__.py  test_ui.py
utils/: helper.py
